[project]
name = "comfyui-chat-gpt-integration"
description = "This extension is a reimagined version based on the [a/ComfyUI-QualityOfLifeSuit_Omar92](https://github.com/omar92/ComfyUI-QualityOfLifeSuit_Omar92) extension, and it supports integration with ChatGPT through the new OpenAI API.\nNOTE: See detailed installation instructions on the [a/repository](https://github.com/vienteck/ComfyUI-Chat-GPT-Integration)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/vienteck/ComfyUI-Chat-GPT-Integration"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Chat-GPT-Integration"
Icon = ""
